Update to 1.18.1, Version push to 0.6.0-SNAPSHOT